--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
 attrs==25.4.0
 certifi==2025.10.5
-cffi==2.0.0       
-colorama==0.4.6   
-dotenv==0.9.9     
+cffi==2.0.0
+charset-normalizer==3.4.4
+colorama==0.4.6
+dotenv==0.9.9
 h11==0.16.0
 idna==3.11
 iniconfig==2.3.0
 outcome==1.3.0.post0
 packaging==25.0
+pillow==12.0.0
 pluggy==1.6.0
+pycparser==2.23
 Pygments==2.19.2
 PySocks==1.7.1
 pytest==9.0.0
 python-dotenv==1.2.1
+requests==2.32.5
 selenium==4.38.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
