reconstructed the tree building and annotation

--- a/json_schemas/template_json_schemas/template_config.json
+++ b/json_schemas/template_json_schemas/template_config.json
@@ -1,14 +1,13 @@
  {
     "exam_variant": {
         "needs_indexing": "True",
+        "indexing_attribute": "id",
         "skip_indices": [2, 4],
-        "prefetch_elements": "False"
+        "placeholder":"st{index}"
     },
     
     "subject_li": {
         "needs_indexing": "False",
-        "skip_indices": [],
-        "prefetch_elements": "True",
-        "prefetch_tag": "li"
+        "skip_indices": []
     }
 }
