--- a/json_schemas/main_page_schemas/template_config.json
+++ b/json_schemas/main_page_schemas/template_config.json
@@ -3,11 +3,11 @@
         "needs_indexing": "True",
         "indexing_attribute": "id",
         "skip_indices": [2, 4],
-        "placeholder":"st{index}"
+        "placeholder":"{index}"
     },
     
     "subject_li": {
-        "needs_indexing": "False",
+        "needs_indexing": false,
         "skip_indices": []
     }
 }
